--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./src/assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kunal-Rathore | Portfolio</title>
+  <title>It's Kunal-Rathore</title>
 </head>
 
 <body>
